--- a/age.html
+++ b/age.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Temperature conversion</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-    <label for="">Enter t</label>
+    <form>
+        <h1>Temperature Conversion:</h1>
+        <input type ='number' id = 'textbox' value = "0">
+        <input type = 'radio' id ="tofarh" name="unit" >
+        <label for = "tofarh">Fahrenheit to Celsius</label>
+        <input type = 'radio' id ="tofarh" name="unit" >
+        <label for = "tofarh">Fahrenheit to  Celsius</label>
+    </form>
 </body>
 </html>
