added the java script to it

--- a/age.html
+++ b/age.html
@@ -15,5 +15,6 @@
         <input type = 'radio' id ="tofarh" name="unit" >
         <label for = "tofarh">Fahrenheit to  Celsius</label>
     </form>
+    <script src = "index.js"></script>
 </body>
 </html>
